error.txt
Error building program: 1:21:63: error: call to 'convert_float2' is ambiguous
                    float2 posDiff = superPixelPositions[i] - convert_float2((int)(cIn, rIn));
                                                              ^~~~~~~~~~~~~~
./opencl-c.h:1535:22: note: candidate function
float2 __ovld __cnfn convert_float2(char2);
                     ^
./opencl-c.h:1540:22: note: candidate function
float2 __ovld __cnfn convert_float2(uchar2);
                     ^
./opencl-c.h:1545:22: note: candidate function
float2 __ovld __cnfn convert_float2(short2);
                     ^
./opencl-c.h:1550:22: note: candidate function
float2 __ovld __cnfn convert_float2(ushort2);
                     ^
./opencl-c.h:1555:22: note: candidate function
float2 __ovld __cnfn convert_float2(int2);
                     ^
./opencl-c.h:1560:22: note: candidate function
float2 __ovld __cnfn convert_float2(uint2);
                     ^
./opencl-c.h:1565:22: note: candidate function
float2 __ovld __cnfn convert_float2(long2);
                     ^
./opencl-c.h:1570:22: note: candidate function
float2 __ovld __cnfn convert_float2(ulong2);
                     ^
./opencl-c.h:1575:22: note: candidate function
float2 __ovld __cnfn convert_float2(float2);
                     ^
./opencl-c.h:5950:22: note: candidate function
float2 __ovld __cnfn convert_float2(half2);
                     ^
./CTHeader.h:5240:39: note: candidate function
float2 __attribute__((overloadable))  convert_float2(double2);
                                      ^
1:21:84: warning: left operand of comma operator has no effect
                    float2 posDiff = superPixelPositions[i] - convert_float2((int)(cIn, rIn));
                                                                                   ^~~

